#81 Added default values to issued_before
