# src/main/resources/api/swagger.yml
@@ -53,7 +53,7 @@ paths:
             the revocation associated with the tokens to revoke
           in: body
           schema:
-            $ref: '#/definitions/RevocationRequest'
+            $ref: '#/definitions/RevocationData'
       responses:
         # Response code
         201:
@@ -216,7 +216,7 @@ definitions:
           description: The claim of the tokens to revoke
         issued_before:
           type: integer
-          description: a UNIX Timestamp (UTC) indicating that tokens issued before it are revoked. If this property is not set when posting a Claim Revocation, it will default to the current UNIX timestamp (UTC).
+          description: a UNIX Timestamp (UTC) indicating that tokens issued before this value are revoked. If this value is not set when posting a Claim Revocation, it will default to the current UNIX timestamp (UTC).
   ClaimTuple:
     properties:
       name:
@@ -232,7 +232,7 @@ definitions:
       properties:
         issued_before:
           type: integer
-          description: a UNIX Timestamp (UTC) indication that tokens issued before it are revoked.
+          description: a UNIX Timestamp (UTC) indicating that tokens issued before this value are revoked. If this value is not set when posting a Claim Revocation, it will default to the current UNIX timestamp (UTC).
   RevokedTokenData:
     allOf:
     - $ref: '#/definitions/RevokedData'
